fix overflow in landing page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -196,7 +196,7 @@ img.continent-image:hover {
     position: absolute; 
     top: 0;
     bottom: 11rem;
-    width: 100%;
+/*     width: 100%; */
     height: auto;
     z-index: -12;
 }
@@ -336,7 +336,7 @@ footer {
         top: 22rem;
         bottom: 0;
         width: 100%;
-        height: 400px;
+        height: 57vh;
         z-index: -12;
     }
 
